--- a/src/anyang-1.0/i18n/zh_CN.json
+++ b/src/anyang-1.0/i18n/zh_CN.json
@@ -70,5 +70,55 @@
         "SUBMENU": "子菜单"
       }
     }
+  },
+  "page": {
+    "lock": {
+      "TIP": "登录解锁屏幕",
+      "FORGOT-YOUR-PASSWORD": "忘记密码",
+      "UNLOCK": "解锁"
+    },
+    "login": {
+      "TIP": "登录后继续",
+      "REMEMBER-ME": "记住我",
+      "FORGOT-YOUR-PASSWORD": "忘记密码",
+      "LOGIN": "登录",
+      "NEED-SIGN-UP": "需要注册",
+      "SIGN-UP-NOW": "立即注册",
+      "PLACEHOLDER-CODE":"手机/邮箱",
+      "PLACEHOLDER-PASSWORD":"密码"
+    },
+    "register":{
+      "TIP":"注册后立即访问",
+      "TIP-CODE":"手机/邮箱",
+      "PLACEHOLDER-CODE":"手机/邮箱",
+      "TIP-PASSWORD":"输入密码",
+      "TIP-REPASSWORD":"再次输入密码",
+      "TERM-AGREE-A": "我已阅读并同意",
+      "TERM-AGREE-B": "条款",
+      "CREATE-ACCOUNT":"创建帐号",
+      "EXIST-ACCOUNT":"已存在帐号"
+    },
+    "recover": {
+      "TIP":"重置密码",
+      "TIP-DESCRIPTION":"输入邮箱或手机号后根据收到的指令重置密码",
+      "TIP-CODE":"手机/邮箱",
+      "PLACEHOLDER-CODE":"手机/邮箱",
+      "RESET":"重置"
+    },
+    "404":{
+      "TIP":"我们无法找到该页面",
+      "TIP-DESCRIPTION":"您请求的页面不存在",
+      "PLACEHOLDER-SEARCH":"试着搜搜其他",
+      "ACTION-RETURN":"返回首页",
+      "ACTION-LOGIN":"登录",
+      "ACTION-REGISTER":"注册"
+    },
+    "validator": {
+      "REQUIRED": "必填",
+      "EMAIL": "邮箱格式不正确",
+      "PASSWORD-FORMAT": "密码必须匹配大小写字母并且长度大于6小于10",
+      "PASSWORD-MATCH": "二次输入密码不一至",
+      "TERM-AGREE": "必须同意条款"
+    }
   }
 }
