--- a/src/anyang-1.0/i18n/zh_CN.json
+++ b/src/anyang-1.0/i18n/zh_CN.json
@@ -1,25 +1,40 @@
 {
-  "button":{
-    "DISCARD":"取消",
-    "SAVE":"保存",
-    "ADD":"新增",
-    "EDIT":"修改",
-    "REMOVE":"删除"
+  "button": {
+    "CANCEL": "取消",
+    "SAVE": "保存",
+    "ADD": "新增",
+    "EDIT": "修改",
+    "REMOVE": "删除",
+    "CONFIRM": "确定"
   },
-  "grid":{
-    "NO-RESULTS":"没有找到任何数据"
+  "grid": {
+    "LABEL-SEARACH": "关键字",
+    "NO-RESULTS": "没有找到任何数据"
   },
   "validator": {
-    "FIELD-INVALID":"字段验证不通过",
-    "REQUIRED": "必填",
-    "NUMBER": "数字格式不正确",
-    "DATE": "日期格式不正确",
-    "MIN": "大于等于{{min}}",
-    "MAX": "小于等于{{max}}",
-    "EMAIL": "邮箱格式不正确",
-    "PASSWORD-FORMAT": "密码必须匹配大小写字母并且长度大于6小于10",
-    "PASSWORD-MATCH": "二次输入密码不一至",
-    "TERM-AGREE": "必须同意条款"
+    "FIELD-INVALID": "字段验证不通过;",
+    "REQUIRED": "必填;",
+    "NUMBER": "数字格式不正确;",
+    "DATE": "日期格式不正确;",
+    "MIN": "大于等于{{min}};",
+    "MAX": "小于等于{{max}};",
+    "EMAIL": "邮箱格式不正确;",
+    "FORMAT": "{{item}}格式不正确;",
+    "PASSWORD-FORMAT": "密码必须匹配大小写字母并且长度大于6小于10;",
+    "PASSWORD-MATCH": "二次输入密码不一至;",
+    "TERM-AGREE": "必须同意条款;",
+    "ALREADY-EXISTS": "已经存在相同的{{item}};"
+  },
+  "dialog": {
+    "remove": {
+      "TITLE": "删除确认对话框",
+      "MESSAGE": "您确定要删除当前选中记录码？"
+    }
+  },
+  "notification": {
+    "SAVE-SUCCESS": "保存成功",
+    "REMOVE-SUCCESS": "删除成功",
+    "REMOVE-WARNING-NONE": "没有选中任何记录"
   },
   "dashboard": {
     "WELCOME": "欢迎来到{{appName}}"
@@ -43,55 +58,57 @@
     }
   },
   "sidebar": {
-    "subsystem":{
-      "ORGANIZATION-PFTA-STANDARD":"机构养老云-标准版",
-      "COMMUNITY-PFTA-STANDARD":"社区养老云-待定",
-      "MANAGE-CENTER":"管理中心",
-      "DEMO-CENTER":"演示中心"
+    "subsystem": {
+      "ORGANIZATION-PFTA-STANDARD": "机构养老云-标准版",
+      "COMMUNITY-PFTA-STANDARD": "社区养老云-待定",
+      "MANAGE-CENTER": "管理中心",
+      "DEMO-CENTER": "演示中心"
     },
     "WELCOME": "欢迎",
-    "menu-organization-pfta":{
-      "OLDMAN-MANAGE":"老人管理",
-      "ENTER-MANAGE":"入院管理",
-      "IN-MANAGE":"在院管理",
-      "EXIT-MANAGE":"出院管理",
-      "RECEPTION-MANAGE":"接待管理",
-      "LEAVE-MANAGE":"请假管理",
-      "------------":"",
-      "FINANCIAL-MANAGE":"财务管理",
-      "ENTER-PAYMENT":"入院缴费",
-      "RECHARGE":"账户充值",
-      "ARREARAGE-MANAGE":"欠费管理",
-      "PAYMENT-DETAILS":"交费明细",
-      "EXIT-SETTLEMENT":"出院结算",
-      "------------":"",
-      "MATERIAL-MANAGE":"物资管理",
-      "INVENTORY-MANAGE":"库存管理",
-      "DONATION-MANAGE":"捐赠管理",
-      "------------":"",
-      "KNOWLEDGE-BASE-MANAGE":"知识库管理",
-      "------------":"",
-      "SYSTEM-MANAGE":"系统管理",
-      "USER-MANAGE":"用户管理",
-      "DEPARTMENT-MANAGE":"部门管理",
-      "DISTRICT-MANAGE":"片区管理",
-      "BED-MANAGE":"床位管理",
-      "LOG":"系统日志"
+    "menu-organization-pfta": {
+      "OLDMAN-MANAGE": "老人管理",
+      "ENTER-MANAGE": "入院管理",
+      "IN-MANAGE": "在院管理",
+      "EXIT-MANAGE": "出院管理",
+      "RECEPTION-MANAGE": "接待管理",
+      "LEAVE-MANAGE": "请假管理",
+      "------------": "",
+      "FINANCIAL-MANAGE": "财务管理",
+      "ENTER-PAYMENT": "入院缴费",
+      "RECHARGE": "账户充值",
+      "ARREARAGE-MANAGE": "欠费管理",
+      "PAYMENT-DETAILS": "交费明细",
+      "EXIT-SETTLEMENT": "出院结算",
+      "------------": "",
+      "MATERIAL-MANAGE": "物资管理",
+      "INVENTORY-MANAGE": "库存管理",
+      "DONATION-MANAGE": "捐赠管理",
+      "------------": "",
+      "KNOWLEDGE-BASE-MANAGE": "知识库管理",
+      "------------": "",
+      "SYSTEM-MANAGE": "系统管理",
+      "USER-MANAGE": "用户管理",
+      "DEPARTMENT-MANAGE": "部门管理",
+      "DISTRICT-MANAGE": "片区管理",
+      "BED-MANAGE": "床位管理",
+      "LOG": "系统日志"
     },
-    "menu-manage-center":{
-      "METADATA-MANAGE":"元数据管理",
-      "DICTIONARY-MANAGE":"字典管理",
-      "PARAM":"系统参数",
-      "TENANT-MANAGE":"租户管理",
-      "ACCOUNT-MANAGE":"帐号管理"
+    "menu-manage-center": {
+      "METADATA-MANAGE": "元数据管理",
+      "DICTIONARY-MANAGE": "字典管理",
+      "PARAM": "系统参数",
+      "TENANT-MANAGE": "租户管理",
+      "TENANT-ACCOUNT-MANAGE": "帐号管理"
     },
-    "menu-demo-center":{
-      "GRID":"网格",
-      "GRID-BASIC":"基本功能"
+    "menu-demo-center": {
+      "GRID": "网格",
+      "GRID-BASIC": "网格-基本功能",
+      "TREE": "树",
+      "TREE-BASIC": "树-基本功能"
     },
     "nav": {
       "SINGLEVIEW": "单页视图",
-      "SYSTEMPARAMETER":"系统参数",
+      "SYSTEMPARAMETER": "系统参数",
       "menu": {
         "MENU": "菜单",
         "SUBMENU": "子菜单"
@@ -100,46 +117,60 @@
   },
   "page": {
     "lock": {
+      "TITLE": "锁屏",
       "TIP": "登录解锁屏幕",
       "FORGOT-YOUR-PASSWORD": "忘记密码",
       "PLACEHOLDER-PASSWORD": "输入密码",
       "UNLOCK": "解锁"
     },
     "login": {
+      "TITLE": "登录",
       "TIP": "登录后继续",
       "REMEMBER-ME": "记住我",
       "FORGOT-YOUR-PASSWORD": "忘记密码",
       "LOGIN": "登录",
       "NEED-SIGN-UP": "需要注册",
       "SIGN-UP-NOW": "立即注册",
-      "PLACEHOLDER-CODE":"手机/邮箱",
-      "PLACEHOLDER-PASSWORD":"密码"
+      "PLACEHOLDER-CODE": "手机/邮箱",
+      "PLACEHOLDER-PASSWORD": "密码"
     },
-    "register":{
-      "TIP":"注册后立即访问",
-      "TIP-CODE":"手机/邮箱",
-      "PLACEHOLDER-CODE":"手机/邮箱",
-      "TIP-PASSWORD":"输入密码",
-      "TIP-REPASSWORD":"再次输入密码",
+    "register": {
+      "TITLE": "注册",
+      "TIP": "注册后立即访问",
+      "TIP-CODE": "手机/邮箱",
+      "PLACEHOLDER-CODE": "手机/邮箱",
+      "TIP-PASSWORD": "输入密码",
+      "TIP-REPASSWORD": "再次输入密码",
       "TERM-AGREE-A": "我已阅读并同意",
       "TERM-AGREE-B": "条款",
-      "CREATE-ACCOUNT":"创建帐号",
-      "EXIST-ACCOUNT":"已存在帐号"
+      "CREATE-ACCOUNT": "创建帐号",
+      "EXIST-ACCOUNT": "已存在帐号"
     },
     "recover": {
-      "TIP":"重置密码",
-      "TIP-DESCRIPTION":"输入邮箱或手机号后根据收到的指令重置密码",
-      "TIP-CODE":"手机/邮箱",
-      "PLACEHOLDER-CODE":"手机/邮箱",
-      "RESET":"重置"
+      "TITLE": "找回密码",
+      "TIP": "重置密码",
+      "TIP-DESCRIPTION": "输入邮箱或手机号后根据收到的指令重置密码",
+      "TIP-CODE": "手机/邮箱",
+      "PLACEHOLDER-CODE": "手机/邮箱",
+      "RESET": "重置"
     },
-    "404":{
-      "TIP":"我们无法找到该页面",
-      "TIP-DESCRIPTION":"您请求的页面不存在",
-      "PLACEHOLDER-SEARCH":"试着搜搜其他",
-      "ACTION-RETURN":"返回首页",
-      "ACTION-LOGIN":"登录",
-      "ACTION-REGISTER":"注册"
+    "404": {
+      "TITLE": "无法找到网页",
+      "TIP": "我们无法找到该页面",
+      "TIP-DESCRIPTION": "您请求的页面不存在",
+      "PLACEHOLDER-SEARCH": "试着搜搜其他",
+      "ACTION-RETURN": "返回首页",
+      "ACTION-LOGIN": "登录",
+      "ACTION-REGISTER": "注册"
+    }
+  },
+  "error": {
+    "server": {
+      "mongodb": {
+        "0": "未知错误",
+        "E11000": "唯一性检测到该数据项已被使用"
+      }
     }
   }
 }
+
