--- a/src/anyang-1.0/i18n/manage-center-zh_CN.json
+++ b/src/anyang-1.0/i18n/manage-center-zh_CN.json
@@ -1,41 +1,110 @@
 {
   "manage-center": {
     "HEAD-ORG-NAME":"安养管理",
-    "tenant-account-manage": {
+    "pension-agency-account-manage": {
       "list": {
-        "TITLE": "管理中心-租户-帐号-列表"
+        "TITLE": "管理中心-养老机构-帐号-列表"
       },
       "details": {
-        "TITLE": "管理中心-租户-帐号-详情",
+        "TITLE": "管理中心-养老机构-帐号-详情",
         "TAB1": "基本信息",
         "TAB2": "缴费历史",
-        "TAB1-LABEL-NAME": "租户名称",
+        "TAB1-LABEL-NAME": "养老机构名称",
         "TAB1-PLACEHOLDER-NAME": "XX市XX养老院..",
         "TAB1-LABEL-PHONE": "手机号码",
         "TAB1-PLACEHOLDER-PHONE": "137XXXX0258..",
         "TAB1-LABEL-EMAIL": "邮箱地址",
         "TAB1-PLACEHOLDER-EMAIL": "abc@123.com..",
-        "TAB1-LABEL-TYPE": "租户类型",
-        "TAB1-PLACEHOLDER-TYPE": "请选择一个租户类型..",
+        "TAB1-LABEL-TYPE": "养老机构类型",
+        "TAB1-PLACEHOLDER-TYPE": "请选择一个养老机构类型..",
         "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
-        "TAB1-LABEL-ACTIVE_FLAG": "开通标志",
-        "TAB1-LABEL-CERTIFICATE_FLAG": "认证标志",
+        "TAB1-LABEL-ACTIVE_FLAG": "开通",
+        "TAB1-LABEL-CERTIFICATE_FLAG": "认证",
         "TAB1-LABEL-TERMSOFVALIDITY_LATEST": "有效期至",
         "TAB1-PLACEHOLDER-TERMSOFVALIDITY_LATEST": "日期.."
       }
     },
-    "tenant-user-manage": {
+    "pension-agency-user-manage": {
       "list": {
-        "TITLE": "管理中心-租户-用户-列表"
+        "TITLE": "管理中心-养老机构-用户-列表"
       },
       "details": {
-        "TITLE": "管理中心-租户-用户-详情",
+        "TITLE": "管理中心-养老机构-用户-详情",
+        "TAB1": "基本信息",
         "TAB1-LABEL-CODE": "用户编码",
         "TAB1-PLACEHOLDER-CODE": "rainbow@anyang.com",
         "TAB1-LABEL-NAME": "用户名称",
         "TAB1-PLACEHOLDER-NAME": "钟芷睿..",
-        "TAB1-LABEL-TENANT_ID": "所属租户",
-        "TAB1-PLACEHOLDER-TENANT_ID": "请选择用户所属企业.."
+        "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
+        "TAB1-LABEL-STOP_FLAG": "停用",
+        "TAB1-LABEL-TENANT_ID": "所属养老机构",
+        "TAB1-PLACEHOLDER-TENANT_ID": "请选择用户所属养老机构..",
+        "TAB1-LABEL-ROLE": "角色",
+        "TAB1-PLACEHOLDER-ROLE": "请设置用户角色..",
+        "TAB1-LABEL-PHONE": "手机号码",
+        "TAB1-PLACEHOLDER-PHONE": "137XXXX0258.."
+      }
+    },
+    "agent-account-manage": {
+      "list": {
+        "TITLE": "管理中心-代理商-帐号-列表"
+      },
+      "details": {
+        "TITLE": "管理中心-代理商-帐号-详情",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-NAME": "代理商名称",
+        "TAB1-PLACEHOLDER-NAME": "XX市XX公司..",
+        "TAB1-LABEL-PHONE": "手机号码",
+        "TAB1-PLACEHOLDER-PHONE": "137XXXX0258..",
+        "TAB1-LABEL-EMAIL": "邮箱地址",
+        "TAB1-PLACEHOLDER-EMAIL": "abc@123.com..",
+        "TAB1-LABEL-TYPE": "代理商类型",
+        "TAB1-PLACEHOLDER-TYPE": "请选择一个代理商类型..",
+        "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
+        "TAB1-LABEL-ACTIVE_FLAG": "开通",
+        "TAB1-LABEL-CERTIFICATE_FLAG": "认证",
+        "TAB1-LABEL-TERMSOFVALIDITY_LATEST": "有效期至",
+        "TAB1-PLACEHOLDER-TERMSOFVALIDITY_LATEST": "日期.."
+      }
+    },
+    "agent-user-manage": {
+      "list": {
+        "TITLE": "管理中心-代理商-用户-列表"
+      },
+      "details": {
+        "TITLE": "管理中心-代理商-用户-详情",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-CODE": "用户编码",
+        "TAB1-PLACEHOLDER-CODE": "rainbow@anyang.com",
+        "TAB1-LABEL-NAME": "用户名称",
+        "TAB1-PLACEHOLDER-NAME": "钟芷睿..",
+        "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
+        "TAB1-LABEL-STOP_FLAG": "停用",
+        "TAB1-LABEL-TENANT_ID": "所属代理商",
+        "TAB1-PLACEHOLDER-TENANT_ID": "请选择用户所属代理商..",
+        "TAB1-LABEL-ROLE": "角色",
+        "TAB1-PLACEHOLDER-ROLE": "请设置用户角色..",
+        "TAB1-LABEL-PHONE": "手机号码",
+        "TAB1-PLACEHOLDER-PHONE": "137XXXX0258.."
+      }
+    },
+    "platform-user-manage": {
+      "list": {
+        "TITLE": "管理中心-平台-用户-列表"
+      },
+      "details": {
+        "TITLE": "管理中心-平台-用户-详情",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-CODE": "用户编码",
+        "TAB1-PLACEHOLDER-CODE": "rainbow@anyang.com",
+        "TAB1-LABEL-NAME": "用户名称",
+        "TAB1-PLACEHOLDER-NAME": "钟芷睿..",
+        "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
+        "TAB1-LABEL-STOP_FLAG": "停用",
+        "TAB1-LABEL-ROLE": "角色",
+        "TAB1-PLACEHOLDER-ROLE": "请设置用户角色..",
+        "TAB1-LABEL-PHONE": "手机号码",
+        "TAB1-PLACEHOLDER-PHONE": "137XXXX0258.."
       }
     }
   }
