--- a/src/anyang-1.0/i18n/manage-center-zh_CN.json
+++ b/src/anyang-1.0/i18n/manage-center-zh_CN.json
@@ -1,6 +1,6 @@
 {
   "manage-center": {
-    "HEAD-ORG-NAME":"安养管理",
+    "HEAD-ORG-NAME": "安养管理",
     "pension-agency-account-manage": {
       "list": {
         "TITLE": "管理中心-养老机构-帐号-列表"
@@ -20,13 +20,14 @@
         "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
         "TAB1-LABEL-ACTIVE_FLAG": "开通",
         "TAB1-LABEL-CERTIFICATE_FLAG": "认证",
-        "TAB1-LABEL-TERMSOFVALIDITY_LATEST": "有效期至",
-        "TAB1-PLACEHOLDER-TERMSOFVALIDITY_LATEST": "日期.."
+        "TAB1-LABEL-VALIDATE_UTIL": "有效期至",
+        "TAB1-PLACEHOLDER-VALIDATE_UTIL": "日期.."
       }
     },
     "pension-agency-user-manage": {
       "list": {
-        "TITLE": "管理中心-养老机构-用户-列表"
+        "TITLE": "管理中心-养老机构-用户-列表",
+        "RESET-USER-PASSWORD-COMMENT":"密码将会被重设为默认值"
       },
       "details": {
         "TITLE": "管理中心-养老机构-用户-详情",
@@ -45,6 +46,36 @@
         "TAB1-PLACEHOLDER-PHONE": "137XXXX0258.."
       }
     },
+    "pension-agency-open-funcs": {
+      "TITLE": "管理中心-养老机构-开通功能",
+      "PLACEHOLDER-SELECTED-TENANT": "请选择一个养老机构进行开通功能",
+      "SUM-TITLE": "合计：￥",
+      "SUM-PERIOD": "/月",
+      "HEADER-FUNC-NAME": "功能模块",
+      "HEADER-MARKET-CHARGE": "市场价",
+      "HEADER-CHARGER": "调价器"
+    },
+    "pension-agency-order-manage": {
+      "list": {
+        "TITLE": "管理中心-养老机构-订单-列表",
+        "COMPLETE-ORDER-COMMENT":"完成订单后将立即开通订单所选功能"
+      },
+      "details": {
+        "TITLE": "管理中心-养老机构-订单-详情",
+        "REFUND-ORDER-COMMENT":"订单退款后将立即关闭订单所选功能",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-CODE": "订单编号",
+        "TAB1-PLACEHOLDER-CODE": "自动生成..",
+        "TAB1-LABEL-PERIOD_CHARGE": "单价",
+        "TAB1-PLACEHOLDER-PERIOD_CHARGE": "选定购买模块后自动计算..",
+        "TAB1-LABEL-ORDER_ITEMS": "功能明细",
+        "TAB1-LABEL-DURATION": "数量(月)",
+        "TAB1-PLACEHOLDER-DURATION": "12..",
+        "TAB1-LABEL-TENANT_ID": "所属养老机构",
+        "TAB1-PLACEHOLDER-TENANT_ID": "请选择订单所属养老机构..",
+        "TAB1-LABEL-ORDER_STATUS": "订单状态"
+      }
+    },
     "agent-account-manage": {
       "list": {
         "TITLE": "管理中心-代理商-帐号-列表"
@@ -52,6 +83,7 @@
       "details": {
         "TITLE": "管理中心-代理商-帐号-详情",
         "TAB1": "基本信息",
+        "TAB2": "缴费历史",
         "TAB1-LABEL-NAME": "代理商名称",
         "TAB1-PLACEHOLDER-NAME": "XX市XX公司..",
         "TAB1-LABEL-PHONE": "手机号码",
@@ -63,13 +95,14 @@
         "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
         "TAB1-LABEL-ACTIVE_FLAG": "开通",
         "TAB1-LABEL-CERTIFICATE_FLAG": "认证",
-        "TAB1-LABEL-TERMSOFVALIDITY_LATEST": "有效期至",
-        "TAB1-PLACEHOLDER-TERMSOFVALIDITY_LATEST": "日期.."
+        "TAB1-LABEL-VALIDATE_UTIL": "有效期至",
+        "TAB1-PLACEHOLDER-VALIDATE_UTIL": "日期.."
       }
     },
     "agent-user-manage": {
       "list": {
-        "TITLE": "管理中心-代理商-用户-列表"
+        "TITLE": "管理中心-代理商-用户-列表",
+        "RESET-USER-PASSWORD-COMMENT":"密码将会被重设为默认值"
       },
       "details": {
         "TITLE": "管理中心-代理商-用户-详情",
@@ -86,6 +119,34 @@
         "TAB1-PLACEHOLDER-ROLE": "请设置用户角色..",
         "TAB1-LABEL-PHONE": "手机号码",
         "TAB1-PLACEHOLDER-PHONE": "137XXXX0258.."
+      }
+    },
+    "agent-open-funcs": {
+      "TITLE": "管理中心-代理商-开通功能",
+      "PLACEHOLDER-SELECTED-TENANT": "请选择一个代理商进行开通功能",
+      "SUM-TITLE": "合计：￥",
+      "SUM-PERIOD": "/月",
+      "HEADER-FUNC-NAME": "功能模块",
+      "HEADER-MARKET-CHARGE": "市场价",
+      "HEADER-CHARGER": "调价器"
+    },
+    "agent-order-manage": {
+      "list": {
+        "TITLE": "管理中心-代理商-订单-列表"
+      },
+      "details": {
+        "TITLE": "管理中心-代理商-订单-详情",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-CODE": "订单编号",
+        "TAB1-PLACEHOLDER-CODE": "自动生成..",
+        "TAB1-LABEL-PERIOD_CHARGE": "单价",
+        "TAB1-PLACEHOLDER-PERIOD_CHARGE": "选定购买模块后自动计算..",
+        "TAB1-LABEL-ORDER_ITEMS": "功能明细",
+        "TAB1-LABEL-DURATION": "数量(月)",
+        "TAB1-PLACEHOLDER-DURATION": "12..",
+        "TAB1-LABEL-TENANT_ID": "所属代理商",
+        "TAB1-PLACEHOLDER-TENANT_ID": "请选择订单所属代理商..",
+        "TAB1-LABEL-ORDER_STATUS": "订单状态"
       }
     },
     "platform-user-manage": {
@@ -105,6 +166,23 @@
         "TAB1-PLACEHOLDER-ROLE": "请设置用户角色..",
         "TAB1-LABEL-PHONE": "手机号码",
         "TAB1-PLACEHOLDER-PHONE": "137XXXX0258.."
+      }
+    },
+    "func": {
+      "TITLE": "管理中心-平台-功能模块",
+      "SUM-TITLE": "合计：￥",
+      "SUM-PERIOD": "/月",
+      "HEADER-FUNC-NAME": "功能模块",
+      "HEADER-CHARGER": "调价器"
+    },
+    "order-receipt-confirmation": {
+      "list": {
+        "TITLE": "管理中心-平台-收款确认订单-列表"
+      }
+    },
+    "order-refund-confirmation": {
+      "list": {
+        "TITLE": "管理中心-平台-退款确认订单-列表"
       }
     }
   }
