--- a/src/anyang-1.0/i18n/manage-center-zh_CN.json
+++ b/src/anyang-1.0/i18n/manage-center-zh_CN.json
@@ -35,7 +35,7 @@
         "TAB1-LABEL-CODE": "用户编码",
         "TAB1-PLACEHOLDER-CODE": "rainbow@anyang.com",
         "TAB1-LABEL-NAME": "用户名称",
-        "TAB1-PLACEHOLDER-NAME": "钟芷睿..",
+        "TAB1-PLACEHOLDER-NAME": "钟XX..",
         "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
         "TAB1-LABEL-STOP_FLAG": "停用",
         "TAB1-LABEL-TENANT_ID": "所属养老机构",
@@ -112,7 +112,7 @@
         "TAB1-LABEL-CODE": "用户编码",
         "TAB1-PLACEHOLDER-CODE": "rainbow@anyang.com",
         "TAB1-LABEL-NAME": "用户名称",
-        "TAB1-PLACEHOLDER-NAME": "钟芷睿..",
+        "TAB1-PLACEHOLDER-NAME": "钟XX..",
         "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
         "TAB1-LABEL-STOP_FLAG": "停用",
         "TAB1-LABEL-TENANT_ID": "所属代理商",
@@ -161,7 +161,7 @@
         "TAB1-LABEL-CODE": "用户编码",
         "TAB1-PLACEHOLDER-CODE": "rainbow@anyang.com",
         "TAB1-LABEL-NAME": "用户名称",
-        "TAB1-PLACEHOLDER-NAME": "钟芷睿..",
+        "TAB1-PLACEHOLDER-NAME": "钟XX..",
         "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
         "TAB1-LABEL-STOP_FLAG": "停用",
         "TAB1-LABEL-ROLE": "角色",
