--- a/src/anyang-1.0/i18n/organization-pfta-standard-zh_CN.json
+++ b/src/anyang-1.0/i18n/organization-pfta-standard-zh_CN.json
@@ -1,3 +1,80 @@
 {
-  "organization-pfta-standard": {}
+  "organization-pfta": {
+    "enter-manage": {
+      "list": {
+        "TITLE": "机构养老云-老人管理-入院-列表"
+      },
+      "details": {
+        "TITLE": "机构养老云-老人管理-入院-详情",
+        "HEAD-LABEL-CODE":"入院登记号",
+        "HEAD-PLACEHOLDER-CODE":"自动生成",
+        "HEAD-LABEL-ENTER_ON":"入院日期",
+        "TAB1": "老人信息",
+        "TAB2": "食宿信息",
+        "TAB3": "服务项目",
+        "TAB4": "财务信息",
+        "TAB1-LABEL-ELDERLY-NAME": "老人姓名",
+        "TAB1-PLACEHOLDER-ELDERLY-NAME": "张三",
+        "TAB1-LABEL-ELDERLY-ID_NO": "身份证号",
+        "TAB1-LABEL-ELDERLY-SEX": "性别",
+        "TAB1-LABEL-ELDERLY-BIRTHDAY": "出生日期",
+        "TAB1-PLACEHOLDER-ELDERLY-BIRTHDAY": "从身份证读取..",
+        "TAB1-LABEL-ELDERLY-MARRIAGE": "婚姻情况",
+        "TAB1-LABEL-ELDERLY-HOME_ADDRESS": "家庭住址",
+        "TAB1-PLACEHOLDER-ELDERLY-HOME_ADDRESS": "XX小区X幢X单元XXX",
+        "TAB1-LABEL-ELDERLY-MEDICAL_INSURANCE": "医保所在地",
+        "TAB1-LABEL-ELDERLY-POLITICS_STATUS": "政治面貌",
+        "TAB1-LABEL-ELDERLY-INHABIT_STATUS": "居住状况",
+        "TAB1-LABEL-ELDERLY-FINANCIAL_STATUS": "经济状况",
+        "TAB1-LABEL-ELDERLY-HOBBIES": "爱好特长",
+        "TAB1-LABEL-ELDERLY-MEDICAL_HISTORIES": "过往病史"
+      }
+    },
+    "user-manage": {
+      "list": {
+        "TITLE": "机构养老云-系统管理-用户-列表",
+        "RESET-USER-PASSWORD-COMMENT":"密码将会被重设为默认值"
+      },
+      "details": {
+        "TITLE": "机构养老云-系统管理-用户-详情",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-CODE": "用户编码",
+        "TAB1-PLACEHOLDER-CODE": "rainbow@anyang.com",
+        "TAB1-LABEL-NAME": "用户名称",
+        "TAB1-PLACEHOLDER-NAME": "钟XX..",
+        "TAB1-LABEL-FLAG-COLLECTION": "标志集合",
+        "TAB1-LABEL-STOP_FLAG": "停用",
+        "TAB1-LABEL-ROLE": "角色",
+        "TAB1-PLACEHOLDER-ROLE": "请设置用户角色..",
+        "TAB1-LABEL-PHONE": "手机号码",
+        "TAB1-PLACEHOLDER-PHONE": "137XXXX0258.."
+      }
+    },
+    "room-manage": {
+      "list": {
+        "TITLE": "机构养老云-系统管理-房间-列表"
+      },
+      "details": {
+        "TITLE": "机构养老云-系统管理-房间-详情",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-DISTRICT_ID":"所在片区",
+        "TAB1-PLACEHOLDER-DISTRICT_ID":"请选择一个片区..",
+        "TAB1-LABEL-NAME": "房间名称",
+        "TAB1-PLACEHOLDER-NAME": "1201..",
+        "TAB1-LABEL-CAPACITY": "床位数量",
+        "TAB1-PLACEHOLDER-CAPACITY": "6.."
+      }
+    },
+    "district-manage": {
+      "list": {
+        "TITLE": "机构养老云-系统管理-片区-列表"
+      },
+      "details": {
+        "TITLE": "机构养老云-系统管理-片区-详情",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-NAME": "片区名称",
+        "TAB1-PLACEHOLDER-NAME": "A区南楼.."
+      }
+    }
+  }
 }
