20160517a 老人入院增改及树控件修改

--- a/src/anyang-1.0/i18n/demo-center-zh_CN.json
+++ b/src/anyang-1.0/i18n/demo-center-zh_CN.json
@@ -36,6 +36,10 @@
     "tree-tile": {
       "TITLE": "演示中心-树-平铺"
     },
+    "dropdown": {
+      "TITLE": "演示中心-下拉选择",
+      "DEFAULT-PLACEHOLDER": "请选择"
+    },
     "box-input":{
       "TITLE": "演示中心-方框输入",
       "ID_NO": "身份证号",
