--- a/src/anyang-1.0/i18n/organization-pfta-standard-zh_CN.json
+++ b/src/anyang-1.0/i18n/organization-pfta-standard-zh_CN.json
@@ -4,7 +4,8 @@
       "list": {
         "TITLE": "机构养老云-老人管理-入院-列表",
         "SUBMIT-ENTER-FINANCIAL-AUDIT":"提交财务审核",
-        "COMPLETE-ENTER":"确认完成入院"
+        "COMPLETE-ENTER":"确认完成入院",
+        "CAN-NOT-ADD-AS-LIMIT":"无法新增入院记录，因为机构当前已经达到最大入住数量"
       },
       "details": {
         "TITLE": "机构养老云-老人管理-入院-详情",
@@ -77,15 +78,18 @@
         "TAB1-PLACEHOLDER-REMARK":"补充说明一些情况",
         "TAB1-LABEL-FAMILY-MEMBER": "家庭成员",
         "TAB1-LABEL-FAMILY-MEMBER-NAME": "姓名",
+        "TAB1-LABEL-FAMILY-MEMBER-ID_NO": "身份证",
         "TAB1-LABEL-FAMILY-MEMBER-SEX": "性别",
         "TAB1-LABEL-FAMILY-MEMBER-RELATION_WITH": "与老人关系",
         "TAB1-LABEL-FAMILY-MEMBER-PHONE": "联系电话",
         "TAB1-LABEL-FAMILY-MEMBER-ADDRESS": "地址",
         "TAB1-PLACEHOLDER-FAMILY-MEMBER-NAME": "家属姓名",
+        "TAB1-PLACEHOLDER-FAMILY-MEMBER-ID_NO": "家属身份证号码",
         "TAB1-PLACEHOLDER-FAMILY-MEMBER-PHONE": "联系电话",
         "TAB1-PLACEHOLDER-FAMILY-MEMBER-ADDRESS": "联系地址",
         "TAB1-BOARD-INFO":"饮食套餐",
         "TAB1-ROOM-INFO":"房间床位",
+        "TAB1-OTHER-AND-CUSTOMIZED-INFO":"其他费用与特色服务",
         "TAB1-ROOM-OCCUPANCY-CHANGE-HISTORY":"入住房间变动情况",
         "TAB1-ROOM-OCCUPANCY-CHANGE-HISTORY-ROOM_SUMMARY":"房间床位信息",
         "TAB1-ROOM-OCCUPANCY-CHANGE-HISTORY-IN_FLAG":"动作",
@@ -108,8 +112,7 @@
         "TAB2-LABEL-JOURNAL_ACCOUNT-DIGEST": "摘要",
         "TAB2-LABEL-JOURNAL_ACCOUNT-AMOUNT": "金额",
         "COMPLETE-ENTER":"确认完成入院",
-        "EXIT-CONFIRM-MESSAGE": "您确定要申请出院么？",
-        "COMPLETE-EXIT-CONFIRM-MESSAGE":"老人将最终完成出院，确定要继续么？"
+        "EXIT-CONFIRM-MESSAGE": "您确定要申请出院么？"
       }
     },
     "exit-manage": {
@@ -118,7 +121,8 @@
         "SUBMIT-EXIT-PRE-FLOW-AUDIT": "提交部门流转审核",
         "AUDIT-ITEM_RETURN":"归还物品检查",
         "AUDIT-SETTLEMENT":"出院结算",
-        "COMPLETE-EXIT": "确认完成出院"
+        "COMPLETE-EXIT": "确认完成出院",
+        "COMPLETE-EXIT-CONFIRM-MESSAGE":"老人将最终完成出院，确定要继续么？"
       },
       "details": {
         "NONE":"",
@@ -184,6 +188,60 @@
         "TO-COMPLETE-EXIT-CONFIRM-MESSAGE":"老人将最终完成出院，确定要继续么？"
       }
     },
+    "reception-manage": {
+      "list": {
+        "TITLE": "机构养老云-老人管理-接待-列表"
+      },
+      "details": {
+        "TITLE": "机构养老云-老人管理-接待-详情",
+        "HEAD-LABEL-CODE": "接待登记号",
+        "HEAD-PLACEHOLDER-CODE": "自动生成",
+        "HEAD-LABEL-BEGIN_ON": "探望日期",
+        "TAB1":"来访信息",
+        "TAB1-LABEL-ELDERLY":"探望对象",
+        "TAB1-PLACEHOLDER-ELDERLY":"输入老人的姓名、及其拼音或五笔码查找。例如：张三/zs/xd",
+        "TAB1-LABEL-VISIT_INFO-NAME":"访客-姓名",
+        "TAB1-PLACEHOLDER-VISIT_INFO-NAME":"张三",
+        "TAB1-LABEL-VISIT_INFO-ID_NO":"访客-身份证号",
+        "TAB1-LABEL-VISIT_INFO-SEX":"访客-性别",
+        "TAB1-LABEL-VISIT_INFO-RELATION_WITH":"访客-与老人关系",
+        "TAB1-LABEL-VISIT_INFO-PHONE":"访客-联系电话",
+        "TAB1-PLACEHOLDER-VISIT_INFO-PHONE":"187-8172-7282/0571-88234567",
+        "TAB1-LABEL-VISIT_INFO-ADDRESS":"访客-联系地址",
+        "TAB1-PLACEHOLDER-VISIT_INFO-ADDRESS":"XX小区X幢X单元XXX",
+        "TAB1-LABEL-END_ON": "探望结束时间",
+        "TAB1-LABEL-REMARK":"备注",
+        "TAB1-PLACEHOLDER-REMARK":"补充说明一些情况",
+        "SYNC_FAMILY_MEMBERS_SUCCESS":"同步老人家庭成员数据成功"
+      }
+    },
+    "leave-manage": {
+      "list": {
+        "TITLE": "机构养老云-老人管理-外出-列表"
+      },
+      "details": {
+        "TITLE": "机构养老云-老人管理-外出-详情",
+        "HEAD-LABEL-CODE": "外出登记号",
+        "HEAD-PLACEHOLDER-CODE": "自动生成",
+        "HEAD-LABEL-BEGIN_ON": "外出日期",
+        "TAB1":"外出信息",
+        "TAB1-LABEL-ELDERLY":"外出老人",
+        "TAB1-PLACEHOLDER-ELDERLY":"输入老人的姓名、及其拼音或五笔码查找。例如：张三/zs/xd",
+        "TAB1-LABEL-ACCOMPANY_INFO-NAME":"陪同人-姓名",
+        "TAB1-PLACEHOLDER-ACCOMPANY_INFO-NAME":"张三",
+        "TAB1-LABEL-ACCOMPANY_INFO-ID_NO":"陪同人-身份证号",
+        "TAB1-LABEL-ACCOMPANY_INFO-SEX":"陪同人-性别",
+        "TAB1-LABEL-ACCOMPANY_INFO-RELATION_WITH":"陪同人-与老人关系",
+        "TAB1-LABEL-ACCOMPANY_INFO-PHONE":"陪同人-联系电话",
+        "TAB1-PLACEHOLDER-ACCOMPANY_INFO-PHONE":"187-8172-7282/0571-88234567",
+        "TAB1-LABEL-ACCOMPANY_INFO-ADDRESS":"陪同人-联系地址",
+        "TAB1-PLACEHOLDER-ACCOMPANY_INFO-ADDRESS":"XX小区X幢X单元XXX",
+        "TAB1-LABEL-END_ON": "归还时间",
+        "TAB1-LABEL-REMARK":"备注",
+        "TAB1-PLACEHOLDER-REMARK":"补充说明一些情况",
+        "SYNC_FAMILY_MEMBERS_SUCCESS":"同步老人家庭成员数据成功"
+      }
+    },
     "financial-enter-payment":{
       "list":{
         "TITLE": "机构养老云-财务管理-入院缴费-列表"
@@ -203,13 +261,38 @@
         "TAB1-PLACEHOLDER-AMOUNT": "100.00..",
         "TAB1-LABEL-REMARK":"备注",
         "TAB1-PLACEHOLDER-REMARK":"补充说明一些情况",
-        "DISABLE-RECHARGE-CONFIRM-MESSAGE": "您确定要撤销当前的充值记录么？"
+        "TAB1-REDED-TO-RECHARGE":"充值冲红记录",
+        "TAB1-REDED-TO-RECHARGE-CHECK_IN_TIME":"发生时间",
+        "TAB1-REDED-TO-RECHARGE-VOUCHER_NO":"记账凭证号",
+        "TAB1-REDED-TO-RECHARGE-AMOUNT":"发生金额",
+        "TAB1-REDED-TO-RECHARGE-REMARK":"备注",
+        "DISABLE-RECHARGE-CONFIRM-MESSAGE": "您确定要撤销当前的充值记录么？",
+        "DO-RED-FOR-RECHARGE":"充值流水冲红",
+        "RED-CONFIRM-MESSAGE": "您确定要冲红当前的充值记录么？"
       }
     },
     "financial-exit-settlement":{
       "list":{
         "TITLE": "机构养老云-财务管理-出院结算-列表",
         "AUDIT-SETTLEMENT":"出院结算"
+      }
+    },
+    "financial-red": {
+      "list": {
+        "TITLE": "机构养老云-财务管理-机构冲红明细-列表"
+      },
+      "details": {
+        "TITLE": "机构养老云-财务管理-机构冲红明细-详情",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-VOUCHER_NO":"记账凭证号",
+        "TAB1-LABEL-CHECK_IN_TIME":"发生时间",
+        "TAB1-LABEL-AMOUNT": "充红金额",
+        "TAB1-PLACEHOLDER-AMOUNT": "100.00..",
+        "TAB1-LABEL-RAW_AMOUNT": "原始记账金额",
+        "TAB1-LABEL-REMARK":"备注",
+        "TAB1-PLACEHOLDER-REMARK":"补充说明一些情况",
+        "DISABLE-RED-CONFIRM-MESSAGE":"您确定要撤销当前的冲红记录么？",
+        "INVALID-VOUCHER_NO-TO-RED":"凭证号无效或者还没有结转，请确认"
       }
     },
     "financial-org-receipts-and-disbursements-details":{
@@ -299,6 +382,20 @@
       "HEADER-PERIOD_PRICE": "收费价格",
       "HEADER-PRICER": "调价器",
       "HEADER-PERIOD": "收费周期"
+    },
+    "charge-item-customized": {
+      "list": {
+        "TITLE": "机构养老云-系统管理-特色服务-列表"
+      },
+      "details": {
+        "TITLE": "机构养老云-系统管理-特色服务-详情",
+        "TAB1": "基本信息",
+        "TAB1-LABEL-NAME": "服务名称",
+        "TAB1-PLACEHOLDER-NAME": "每月体检..",
+        "TAB1-LABEL-Served_Quantity":"服务老人数量",
+        "TAB1-LABEL-REMARK":"备注",
+        "TAB1-PLACEHOLDER-REMARK":"补充说明一些情况"
+      }
     }
   },
   "charge-item": {
@@ -358,7 +455,9 @@
         "ELECTRIC":"电费",
         "COOLING":"空调费",
         "HEATING":"暖气费"
-      }
+      },
+      "CUSTOMIZED-S1": "特色服务",
+      "CUSTOMIZED-S2": "特色服务"
     }
   }
 }
