--- a/src/anyang-1.0/i18n/zh_CN.json
+++ b/src/anyang-1.0/i18n/zh_CN.json
@@ -263,6 +263,11 @@
         "E11000": "唯一性检测到该数据项已被使用"
       }
     }
+  },
+  "aggregate_keywords":{
+    "MAX":"最大值",
+    "MIN":"最小值",
+    "AVERAGE":"平均值"
   }
 }
 
