--- a/src/anyang-1.0/i18n/organization-pfta-standard-zh_CN.json
+++ b/src/anyang-1.0/i18n/organization-pfta-standard-zh_CN.json
@@ -10,7 +10,16 @@
       "SUBSIDIARY_LEDGER-SOCIAL_DONATION":"社会捐赠账户",
       "BED-INFO-TOTALS":"床位总数",
       "BED-INFO-LIVEINS":"占用数",
-      "BED-INFO-VACANCY_RATE":"床位空置率"
+      "BED-INFO-VACANCY_RATE":"床位空置率",
+      "CHART-TITLE-ELDERLY-AGE-GROUPS":"入住老人年龄分布",
+      "CHART-SERIE-NAME-ELDERLY-AGE-GROUPS":"年龄区间",
+      "&lt60":"60周岁以下",
+      "60-69":"60-69周岁",
+      "70-79":"70-79周岁",
+      "&gte80":"80周岁及以上",
+      "CHART-TITLE-ROOM-VACANCY_RATE-MONTHLY":"近期入住情况",
+      "CHART-SERIE-NAME-ROOM-VACANCY_RATE-MONTHLY":"入住人数",
+      "CHART-SERIE-DATA-UNIT-ROOM-VACANCY_RATE-MONTHLY":"人"
     },
     "enter-manage": {
       "list": {
